kubernetes/wsock/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wsock
spec:
  selector:
    app: wsock 
  ports:
    - port: 80
      targetPort: 8080
